<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.maréu_list.AddMeetingActivity"
        android:id="@+id/activity_add_meeting_layout">

        <LinearLayout
            style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_add_meeting_topic_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/grey"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_add_meeting_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Sujet"
                    android:inputType="textShortMessage"
                    android:textSize="@dimen/size_activity_add_meeting_layout_input_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@color/grey">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:text="Choisir la salle"
                    android:textSize="@dimen/size_activity_add_meeting_layout_input_text"
                    />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/activity_add_meeting_room_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundTint="#5A4E4E" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <DatePicker
                    android:id="@+id/activity_add_meeting_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_pink"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:gravity="center"
                    android:textSize="@dimen/size_activity_add_meeting_layout_input_text">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:text="Choisir la date"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_activity_add_meeting_layout_input_text"/>

                </DatePicker>

                <TimePicker
                    android:id="@+id/activity_add_meeting_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/light_yellow"
                    android:timePickerMode="spinner"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:text="Choisir l'heure de début"
                        android:textStyle="bold"
                        android:textSize="@dimen/size_activity_add_meeting_layout_input_text"/>

                </TimePicker>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_add_meeting_duration_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_add_meeting_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Durée de la réunion"
                    android:inputType="number"
                    android:textSize="@dimen/size_activity_add_meeting_layout_input_text"
                    android:background="@color/grey"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_add_meeting_attendees_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/activity_add_meeting_attendees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Participants"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/size_activity_add_meeting_layout_input_text"
                        android:background="@color/grey"/>

                    <include layout="@layout/activity_add_meeting_attendee_list" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/activity_add_meeting_add_attendee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="-50dp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ic_baseline_person_add_24_grey" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_add_meeting_save_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:text="Ajouter la réunion"
                app:cornerRadius="20dp"
                android:textSize="@dimen/size_activity_add_meeting_layout_input_text"/>

        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_add_meeting_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>