<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_meeting_list_activity"
        android:icon="@drawable/ic_baseline_filter_list_48_white"
        android:title="filtre"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:orderInCategory="1"
                android:id="@+id/filterDate"
                android:title="filtre date"
                app:showAsAction="never" />

            <item
                android:orderInCategory="2"
                android:id="@+id/filterRoom"
                android:title="filtre salle"
                app:showAsAction="never" />

            <item
                android:orderInCategory="2"
                android:id="@+id/reset_filter"
                android:title="supprimer le filtre"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>
