...
                    android:textStyle="italic"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <include layout="@layout/activity_meetings_list"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_ma_reu_add_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_baseline_add_48"
        app:fabSize="mini"
...
